--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,13 +1,13 @@
 
 {
 	"name": "Youtube Word Search",
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"description": "An extension that lets you search for words in a youtube video, and seeks to that timestamp",
 	"icons": {
-		"16": "16.png",
-		"32": "32.png",
-		"48": "48.png",
-		"128": "128.png"
+		"16": "icons/16.png",
+		"32": "icons/32.png",
+		"48": "icons/48.png",
+		"128": "icons/128.png"
 	},
   "manifest_version": 2,
 	"permissions": [
